# paper-mswim2026

./: .gitignore  .gitmodules  Dockerfile  README.md  entrypoint.sh
1-validation/: README.md  validation.py
1-validation/app-embassy/: Cargo.toml  build.rs
2-experiments-latencies/: README.md  experiment_latencies.py
3-experiment-tsch/: README.md  experiment_tsch.py
4-validation-move-action/: README.md  validation_move_action.py
5-experiment-drift/: README.md  experiment_drift.py
data/: data_contiki_Cooja Simulator_Cooja Mote_work0_debug_2026-06-14-23-21-35.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_debug_2026-06-14-23-21-53.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_debug_2026-06-14-23-22-12.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_debug_2026-06-14-23-22-30.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_debug_2026-06-14-23-22-48.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_nodebug_2026-06-14-23-21-23.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_nodebug_2026-06-14-23-21-41.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_nodebug_2026-06-14-23-22-00.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_nodebug_2026-06-14-23-22-18.csv  data_contiki_Cooja Simulator_Cooja Mote_work0_nodebug_2026-06-14-23-22-36.csv  data_contiki_Cooja Simulator_Cooja Mote_work200000_nodebug_2026-06-14-23-21-30.csv  data_contiki_Cooja Simulator_Cooja Mote_work200000_nodebug_2026-06-14-23-21-48.csv  data_contiki_Cooja Simulator_Cooja Mote_work200000_nodebug_2026-06-14-23-22-07.csv  data_contiki_Cooja Simulator_Cooja Mote_work200000_nodebug_2026-06-14-23-22-25.csv  data_contiki_Cooja Simulator_Cooja Mote_work200000_nodebug_2026-06-14-23-22-43.csv  data_contiki_Cooja Simulator_Zolertia Z1_work0_debug_2026-06-15-08-53-20.csv  data_contiki_Cooja Simulator_Zolertia Z1_work0_nodebug_2026-06-15-08-52-15.csv  data_contiki_Cooja Simulator_Zolertia Z1_work5000_nodebug_2026-06-15-10-06-51.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_debug_2026-06-14-20-03-16.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_debug_2026-06-14-20-55-34.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_debug_2026-06-14-22-08-09.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_debug_2026-06-15-08-07-05.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_debug_2026-06-15-10-10-20.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_debug_2026-06-15-11-46-44.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-14-22-47-35.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-14-23-40-17.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-15-01-00-40.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-15-02-23-05.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-15-07-35-24.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-15-09-38-06.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work0_nodebug_2026-06-15-11-14-47.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work500000_nodebug_2026-06-14-23-21-51.csv  data_contiki_FIT IoT-LAB_IoT-LAB M3_work500000_nodebug_2026-06-14-23-56-13.csv  (+137 more)
(+19 files in other folders)
