[package]
edition = "2021"
name = "ieee802154-udp"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ieee802154-udp"
path = "src/bin/ieee802154-udp.rs"

[dependencies]
# --- Embassy core ---------------------------------------------------------
embassy-futures = { version = "0.1.0", path = "../../dependencies/embassy/embassy-futures" }
embassy-sync = { version = "0.5.0", path = "../../dependencies/embassy/embassy-sync" }
embassy-executor = { version = "0.5.0", path = "../../dependencies/embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3.0", path = "../../dependencies/embassy/embassy-time" }
embassy-nrf = { version = "0.1.0", path = "../../dependencies/embassy/embassy-nrf", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "ieee802154"] }

# --- 802.15.4 + RPL/6LoWPAN network stack ---------------------------------
embassy-ieee802154 = { version = "0.1.0", path = "../../dependencies/embassy/embassy-ieee802154" }
embassy-net = { version = "0.4.0", path = "../../dependencies/embassy/embassy-net", features = ["udp", "medium-ieee802154", "proto-ipv6", "proto-rpl-2", "proto-rpl-3"] }

# --- Logging / IO ---------------------------------------------------------
# `log` is the always-on facade used by the UART logger (program output + the
# `send-data` command share the DK VCOM). It is independent of defmt.
log = "0.4"
embedded-io-async = { version = "0.6.1" }

# --- Runtime --------------------------------------------------------------
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
static_cell = { version = "2" }
heapless = "0.8"

# --- Optional defmt/RTT debug transport -----------------------------------
# Pulled in ONLY when the `defmt` feature is enabled. defmt-rtt supplies the
# `#[defmt::global_logger]` and panic-probe supplies the panic handler; both
# emit over RTT to a probe. Without this feature the crate has no dependency on
# any of them and uses a minimal halting panic handler instead.
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", optional = true, features = ["print-defmt"] }

[features]
default = []
# Enable defmt logging over RTT. This turns on the `defmt` feature of every
# embassy crate (so their internal logs are emitted) and brings in defmt-rtt +
# panic-probe. Build/run with: `--features defmt`.
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-nrf/defmt",
    "embassy-ieee802154/defmt",
    "embassy-net/defmt",
    "embedded-io-async/defmt-03",
]

[profile.release]
debug = 2
panic = "abort"

[profile.dev]
panic = "abort"
